tmux color and pc clipboard

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,3 +1,7 @@
+# color of terminal
+set-option -g default-terminal "tmux-256color"
+set-option -ag terminal-overrides ',xterm-256color:RGB'
+
 set -g base-index 1
 unbind r
 bind r source-file ~/.tmux.conf \; display "Reloaded ~/.tmux.conf"
@@ -8,3 +12,9 @@ bind -r k select-pane -U
 bind -r j select-pane -D
 bind -r h select-pane -L
 bind -r l select-pane -R
+
+# escape time
+set-option -sg escape-time 10
+
+# focus events
+set-option -g focus-event on
