--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -2,6 +2,8 @@
 set-option -g default-terminal "tmux-256color"
 set-option -ag terminal-overrides ',xterm-256color:RGB'
 
+set -g status-style 'bg=#232b39 fg=#f1c067'
+
 set -g base-index 1
 unbind r
 bind r source-file ~/.tmux.conf \; display "Reloaded ~/.tmux.conf"
