mouse and scroll support

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,3 +1,9 @@
+# mouse support
+set -g mouse on
+
+# Sane scrolling
+set -g terminal-overrides 'xterm*:smcup@:rmcup@'
+
 # color of terminal
 set-option -g default-terminal "tmux-256color"
 set-option -ag terminal-overrides ',xterm-256color:RGB'
