config for gui and modify directories structure

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -8,7 +8,7 @@ set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 set-option -g default-terminal "tmux-256color"
 set-option -ag terminal-overrides ',xterm-256color:RGB'
 
-set -g status-style 'bg=#232b39 fg=#f1c067'
+# set -g status-style 'bg=#232b39 fg=#f1c067'
 
 set -g base-index 1
 unbind r
