Updating everything (theme, shortcuts, tmux, ...)

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,6 +1,11 @@
 # mouse support
 set -g mouse on
 
+# set shell
+set-option -g default-shell /usr/bin/fish
+
+set -g status-right '#{pane_title} | #{battery_percentage} | %d-%m %H:%M '
+
 # Sane scrolling
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 
@@ -26,3 +31,7 @@ set-option -sg escape-time 10
 
 # focus events
 set-option -g focus-event on
+
+# battery plugin
+# change path if needed
+run-shell ~/Utils/tmux-battery/battery.tmux
