Better file structure and flutter config

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,10 +1,13 @@
 # mouse support
 set -g mouse on
 
+# vi mode
+set editing-mode vi
+
 # set shell
 set-option -g default-shell /usr/bin/fish
 
-set -g status-right '#{pane_title} | #{battery_percentage} | %d-%m %H:%M '
+# set -g status-right '#{pane_title} | #{battery_percentage} | %d-%m %H:%M '
 
 # Sane scrolling
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
@@ -34,4 +37,4 @@ set-option -g focus-event on
 
 # battery plugin
 # change path if needed
-run-shell ~/Utils/tmux-battery/battery.tmux
+# run-shell ~/Utils/tmux-battery/battery.tmux
