--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -15,11 +15,11 @@ set-option -g default-shell /usr/bin/fish
 # set -g status-right '#{pane_title} | #{battery_percentage} | %d-%m %H:%M '
 
 # Sane scrolling
-set -g terminal-overrides 'xterm*:smcup@:rmcup@'
+# set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 
 # color of terminal
-set-option -g default-terminal "tmux-256color"
-set-option -ag terminal-overrides ',xterm-256color:RGB'
+set -g default-terminal "screen-256color"
+set -ga terminal-overrides ",*256col*:Tc"
 
 # set -g status-style 'bg=#232b39 fg=#f1c067'
 
